# QRCodeScanner

./: .gitignore  CMakeLists.txt  QRCodeScanner.qrc  QRCodeScanner.sln  README.md  cpp.hint  resource.h  version.rc.in
QRCodeScanner/: ImageCaptureWidget.cpp  ImageCaptureWidget.h  ImageCaptureWidget.ui  QRCodeScanner.cpp  QRCodeScanner.h  QRCodeScanner.qrc  QRCodeScanner.rc  QRCodeScanner.ui  QRCodeScanner.vcxproj  QRCodeScanner.vcxproj.filters  resource.h
QRCodeScanner/lib/: QZXing3.lib  QZXing3d.lib
QRCodeScanner/lib/ZXingRelease/: ZXing.lib
QRCodeScanner/src/: QRCodeGenerator.cpp  QRCodeGenerator.h  QRCodeGenerator.ui  QRCodeScanner.cpp  QRCodeScanner.h  QRCodeScanner.ui
ZXing-Debug/lib/cmake/ZXing/: ZXingTargets-debug.cmake  ZXingTargets.cmake
ZXing-Release/lib/: ZXing.lib
ZXing-Release/lib/cmake/ZXing/: ZXingTargets-release.cmake
langs/: Translation_en_US.ts  Translation_zh_CN.ts
src/: QRCodeGenerator.cpp  QRCodeGenerator.ui  QRCodeScanner.cpp  QRCodeScanner.h  QRCodeScanner.ui  main.cpp  version.h.in
